--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-asgiref==3.5.2
-Django==4.0.4
-gunicorn==20.1.0
-psycopg2==2.8.6
-sqlparse==0.4.2
+Django==5.0.2
+pillow==10.2.0
+django-allauth==0.61.1
+django-crispy-forms==2.1
+crispy-tailwind==1.0.3
+requests==2.31.0
+requests-oauthlib==1.3.1
